Brick rows ckreated

--- a/src/index.scss
+++ b/src/index.scss
@@ -27,7 +27,7 @@
   --ink10: #008080; /* Cyan */
   --ink11: #0080ff; /* Sky Blue */
   --ink12: #808000; /* Yellow */
-  --ink13: #808080; /* White */
+  --ink13: #fdfdfd; /* White */
   --ink14: #8080ff; /* Pastel Blue */
   --ink15: #ff8000; /* Orange */
   --ink16: #ff8080; /* Pink */
